# deepbook-cex-hedge

./: .env.example  .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  TODO.md  index.esm.js  pools.json
config/: app.toml  contracts.toml
crates/app/: Cargo.toml  shutdown_summary.json
crates/app/src/: health.rs  lib.rs  main.rs  shutdown.rs
crates/app/tests/: integration.rs
crates/cex-execution/: Cargo.toml
crates/cex-execution/src/: lib.rs
crates/cex-watcher/: Cargo.toml
crates/cex-watcher/src/: lib.rs
crates/deepbook-execution/: Cargo.toml
crates/deepbook-execution/src/: lib.rs  sdk_backend.rs
crates/deepbook-execution/src/onchain/: client.rs  mod.rs  orders.rs  sui.rs  types.rs
crates/deepbook-watcher/: Cargo.toml
crates/deepbook-watcher/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/lending/: Cargo.toml
crates/lending/src/: constants.rs  error.rs  lib.rs  onchain.rs
crates/lending/tests/: manual_navi_borrow.rs  manual_navi_deposit.rs  manual_navi_repay.rs  manual_navi_withdraw.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  errors.rs  lib.rs  metrics.rs  types.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  risk.rs
