[package]
name = "cex-execution"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
binance-sdk = { workspace = true }
dotenvy = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
