[package]
name = "lending"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
shared = { path = "../shared" }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
rust_decimal = { workspace = true }
sui_sdk = { workspace = true }
sui-types = { workspace = true }
shared-crypto = { workspace = true }
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
bcs = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
hex = "0.4"
