[package]
name = "strategy"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
deepbook-execution = { path = "../deepbook-execution" }
lending = { path = "../lending" }
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
cex-execution = { path = "../cex-execution" }
